# movie_degrees

./: .gitignore  app.py  build_actor_links.py  degree_finder.py  gary_oldman.json  in_mem_degree_finder.py  prettifyer.py  pyproject.toml  readme.md  whos_in_that_movie.py
